# yolov5-seg-ncnn

demo/: CMakeLists.txt
